--- a/config.env.example
+++ b/config.env.example
@@ -16,21 +16,15 @@ SYNC_INTERVAL=1
 # Enable debug logging for troubleshooting (true/false, default: false)
 DEBUG_MODE=false
 
-# Enable automatic deletion of events not in source (true/false, default: true)
-# WARNING: This will delete events from your Google Calendar that are not in the source ICS file
-ENABLE_EVENT_DELETION=true
+# Log file rotation settings
+# Maximum size of each log file in bytes (default: 10485760 = 10MB)
+LOG_MAX_BYTES=10485760
 
-# Enable detailed comparison logging (true/false, default: false)
-# Shows detailed comparison information for troubleshooting duplicate updates
-DEBUG_COMPARISON=false
+# Number of backup log files to keep (default: 5)
+LOG_BACKUP_COUNT=5
 
-# Enable dry-run mode (true/false, default: false)
-# When enabled, shows what would be deleted but doesn't actually delete events
-DRY_RUN=false
-
-# Enable recurrent event support (true/false, default: true)
-# When enabled, properly handles RRULE and recurring event series
-ENABLE_RECURRENT_EVENTS=true
+# Log file name (default: calendar_sync.log)
+LOG_FILE=calendar_sync.log
 
 # Recurrent event handling mode (single_instance|series|both, default: series)
 # single_instance: Treat each occurrence as separate events
